# events

./: .gitmodules  CMakeLists.txt  README.md  WORKSPACE
events/: BUILD  CMakeLists.txt
events/benchmarks/: BUILD  Publisher.cpp
events/include/: Events.h
events/include/events/: Publisher.h  Subscriber.h  constexpr.h  function_traits.h
events/src/: Events.cpp  Publisher.cpp
events/tests/: BUILD  Events.cpp  Publisher.cpp  function_traits.cpp
examples/: CMakeLists.txt
examples/src/: main.cpp
